--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:url" content="https://nadosdelatidealno.com/">
     <meta property="og:image" content="./images/poster.png">
     <meta property="twitter:card" content="summary_large_image">
-    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./fonts/font.css" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="apple-touch-icon" href="./favicon/apple-touch-icon.png">
